[package]
name = "regex-demo"
version = "0.1.0"
authors = ["Matthew Collier <mcollier@digitalbazaar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "regex_demo"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1"